--- a/app_mxh_manga/app/src/main/res/layout/activity_profile.xml
+++ b/app_mxh_manga/app/src/main/res/layout/activity_profile.xml
@@ -36,10 +36,10 @@
 
                 <FrameLayout
                     android:id="@+id/fl"
-                    android:layout_width="150dp"
-                    android:layout_height="150dp"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
                     android:layout_below="@id/iv_cover"
-                    android:layout_marginTop="-100dp"
+                    android:layout_marginTop="-55dp"
                     android:layout_marginStart="20dp"
                     android:layout_marginBottom="20dp"
                     android:padding="2dp"
@@ -47,11 +47,11 @@
                     <androidx.cardview.widget.CardView
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        app:cardCornerRadius="100dp"
+                        app:cardCornerRadius="50dp"
                         android:layout_gravity="center"
                         app:cardElevation="0dp"
-                        android:layout_margin="5dp"
-                        android:background="@android:color/transparent">
+                        android:layout_margin="3dp"
+                        app:cardBackgroundColor="@color/light_gray">
                         <ImageView
                             android:id="@+id/iv_avt"
                             android:layout_width="match_parent"
