--- a/app_mxh_manga/app/src/main/res/drawable/bg_spinner.xml
+++ b/app_mxh_manga/app/src/main/res/drawable/bg_spinner.xml
@@ -2,7 +2,11 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/white"/>
+            <solid android:color="#FFFFFF"/>
+            <stroke android:width="1dp"
+                android:color="@color/black_50"
+                />
+            <corners android:radius="5dp"/>
         </shape>
     </item>
     <item android:drawable="@drawable/ic_baseline_arrow_drop_down_24"
