--- a/app_mxh_manga/app/src/main/res/layout/activity_creative_zone.xml
+++ b/app_mxh_manga/app/src/main/res/layout/activity_creative_zone.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#5ED0D0D0"
+    android:background="@color/light_gray"
+    android:backgroundTint="@color/light_gray"
     style="@style/Theme_layout"
     tools:context=".homePage.component.story.Activity_creative_zone">
     <androidx.appcompat.widget.Toolbar
@@ -239,11 +240,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Truyện của bạn"
-                    android:textSize="20dp"
+                    android:textSize="20sp"
                     android:textStyle="bold|italic"
                     android:background="@android:color/transparent"
                     />
-
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rv_story"
                     android:layout_width="match_parent"
@@ -252,6 +252,18 @@
                     android:layout_marginBottom="10dp"
                     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                     android:orientation="vertical"/>
+
+                <TextView
+                    android:id="@+id/tv_storyNull"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Bạn chưa có tác phẩm nào"
+                    android:textSize="20sp"
+                    android:textColor="@color/red"
+                    android:background="@android:color/transparent"
+                    android:visibility="gone"
+                    />
+
             </LinearLayout>
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
