--- a/app_mxh_manga/app/src/main/res/layout/activity_signup.xml
+++ b/app_mxh_manga/app/src/main/res/layout/activity_signup.xml
@@ -5,7 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     style="@style/Theme_layout"
-    android:background="@color/light_gray"
     tools:context=".login.component.Activity_signup">
     <RelativeLayout
         android:layout_width="match_parent"
@@ -30,18 +29,16 @@
                 android:id="@+id/textInput_email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/border"
-                app:errorEnabled="true"
-                android:padding="5dp"
-                android:backgroundTint="@color/white"
-                android:layout_marginVertical="5dp">
+                app:errorEnabled="true">
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Nhập địa chỉ email"
                     android:textSize="18sp"
                     android:inputType="textEmailAddress"
-                    android:backgroundTint="@android:color/transparent"
+                    android:backgroundTint="@color/light_gray"
+                    android:background="@drawable/border"
+                    android:padding="10dp"
                     />
 
             </com.google.android.material.textfield.TextInputLayout>
@@ -52,18 +49,16 @@
                 app:errorEnabled="true"
                 app:counterMaxLength="10"
                 app:counterEnabled="true"
-                app:passwordToggleEnabled="true"
-                android:background="@drawable/border"
-                android:padding="5dp"
-                android:backgroundTint="@color/white"
-                android:layout_marginVertical="5dp">
+                app:passwordToggleEnabled="true">
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Nhập mật khẩu"
                     android:textSize="18sp"
-                    android:backgroundTint="@android:color/transparent"
+                    android:backgroundTint="@color/light_gray"
+                    android:background="@drawable/border"
                     android:inputType="textPassword"
+                    android:padding="10dp"
                     android:maxLength="10"
                     />
             </com.google.android.material.textfield.TextInputLayout>
@@ -72,17 +67,16 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:errorEnabled="true"
-                android:background="@drawable/border"
-                android:padding="5dp"
-                android:backgroundTint="@color/white"
-                android:layout_marginVertical="5dp">>
+       >
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Nhập họ và tên"
-                    android:backgroundTint="@android:color/transparent"
+                    android:backgroundTint="@color/light_gray"
+                    android:background="@drawable/border"
                     android:textSize="18sp"
                     android:inputType="text"
+                    android:padding="10dp"
                     />
             </com.google.android.material.textfield.TextInputLayout>
             <EditText
@@ -92,10 +86,10 @@
                 android:background="@drawable/border"
                 android:padding="10dp"
                 android:hint="Chọn ngày sinh"
-                android:textSize="20dp"
+                android:textSize="18sp"
                 android:inputType="date"
                 android:focusable="false"
-                android:backgroundTint="@color/white"
+                android:backgroundTint="@color/light_gray"
                 android:layout_marginVertical="5dp"
                 />
             <TextView
@@ -133,7 +127,7 @@
                 android:text="Đăng ký"
                 android:padding="15dp"
                 android:background="@drawable/selector_btn_rg30"
-                android:backgroundTint="#03A9F4"
+                android:backgroundTint="#2AFF32"
                 android:layout_marginVertical="20dp"
                 />
 
