--- a/app_mxh_manga/app/src/main/res/layout/fragment_genre.xml
+++ b/app_mxh_manga/app/src/main/res/layout/fragment_genre.xml
@@ -18,6 +18,11 @@
             app:title="Thể loại"
             style="@style/Toolbar"
             />
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/darker_gray"
+            />
         <Spinner
             android:id="@+id/spinner_genre"
             android:layout_width="match_parent"
@@ -34,12 +39,15 @@
             android:padding="10dp"
             android:text=""
             android:background="@drawable/border"
-            android:backgroundTint="@color/white"
             android:layout_margin="10dp"
             android:textSize="15sp"
             />
 
-
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/darker_gray"
+            />
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -56,11 +64,16 @@
             android:padding="10dp"
             android:background="@drawable/bg_spinner"
             />
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/darker_gray"
+            android:layout_marginVertical="10dp"
+            />
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_story"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="10dp"
             />
     </LinearLayout>
 
