--- a/app_mxh_manga/app/src/main/res/layout/fragment_home.xml
+++ b/app_mxh_manga/app/src/main/res/layout/fragment_home.xml
@@ -37,6 +37,16 @@
                 android:orientation="vertical"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 android:layout_marginTop="10dp"/>
+            <TextView
+                android:id="@+id/tv_post_null"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="Không có bài viết để hiển thị"
+                android:textSize="20sp"
+                android:padding="10dp"
+                android:gravity="center"
+                android:visibility="gone"
+                />
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 </RelativeLayout>
