--- a/app_mxh_manga/app/src/main/res/layout/item_chapter.xml
+++ b/app_mxh_manga/app/src/main/res/layout/item_chapter.xml
@@ -118,6 +118,6 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@color/black_50"
+        android:background="@color/darker_gray"
         />
 </LinearLayout>
