--- a/app_mxh_manga/app/src/main/res/layout/item_story.xml
+++ b/app_mxh_manga/app/src/main/res/layout/item_story.xml
@@ -4,8 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="200dp"
     android:padding="10dp"
-    android:background="@android:color/transparent"
-    android:layout_marginVertical="10dp">
+    android:background="@android:color/transparent">
     <FrameLayout
         android:id="@+id/frameLayout"
         android:layout_width="130dp"
@@ -19,7 +18,7 @@
             android:layout_height="match_parent"
             app:cardElevation="0dp"
             app:cardBackgroundColor="@color/light_gray"
-            app:cardCornerRadius="10dp">
+            app:cardCornerRadius="5dp">
             <ImageView
                 android:id="@+id/imageStory"
                 android:layout_width="match_parent"
