--- a/app_mxh_manga/app/src/main/res/layout/item_story_name_chapter.xml
+++ b/app_mxh_manga/app/src/main/res/layout/item_story_name_chapter.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="140dp"
     android:layout_margin="5dp"
-    android:padding="10dp"
+    android:padding="5dp"
     android:orientation="vertical"
     android:layout_height="wrap_content">
 
@@ -12,13 +12,27 @@
         android:layout_height="140dp"
         app:cardElevation="0dp"
         app:cardBackgroundColor="@color/light_gray"
-        app:cardCornerRadius="10dp">
+        app:cardCornerRadius="5dp">
         <ImageView
             android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:src="@drawable/ic_launcher_foreground"
             android:scaleType="centerCrop"/>
+        <TextView
+            android:id="@+id/tv_countView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:layout_marginTop="116dp"
+            android:background="#AE484848"
+            android:textColor="@color/white"
+            android:drawableStart="@drawable/ic_baseline_visibility_24"
+            android:paddingHorizontal="5dp"
+            android:ellipsize="end"
+            android:gravity="center_vertical"
+            android:lines="1"
+            />
     </androidx.cardview.widget.CardView>
 
     <TextView
@@ -26,11 +40,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text=""
-        android:lines="2"
+        android:maxLines="2"
         android:gravity="center_vertical"
         style="@style/Theme_textView"
         android:textStyle="bold"
-        android:paddingVertical="5dp"
         android:ellipsize="end"
         />
     <TextView
@@ -38,8 +51,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         style="@style/Theme_textView"
-        android:text="chương 1"
+        android:text=""
         android:textColor="#3C3C3C"
         android:ellipsize="end"
+        android:maxLines="2"
         />
 </LinearLayout>
