--- a/app_mxh_manga/app/src/main/res/layout/item_story_off.xml
+++ b/app_mxh_manga/app/src/main/res/layout/item_story_off.xml
@@ -8,9 +8,10 @@
     <androidx.cardview.widget.CardView
         android:layout_width="100dp"
         android:layout_height="match_parent"
-        app:cardCornerRadius="20dp"
+        app:cardCornerRadius="5dp"
         android:layout_marginEnd="10dp"
-        app:cardBackgroundColor="@color/darker_gray"
+        app:cardElevation="0dp"
+        app:cardBackgroundColor="@color/light_gray"
         >
         <ImageView
             android:id="@+id/iv_story"
