--- a/app_mxh_manga/app/src/main/res/layout/item_top_user.xml
+++ b/app_mxh_manga/app/src/main/res/layout/item_top_user.xml
@@ -1,68 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="120dp"
-    android:padding="10dp">
-    <TextView
-        android:id="@+id/tv_sort_order"
-        android:layout_width="50dp"
+    android:paddingHorizontal="10dp"
+    android:paddingBottom="10dp"
+    >
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginBottom="10dp"
+        android:background="@color/darker_gray"/>
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="01"
-        android:textStyle="bold"
-        android:textSize="25sp"
-        android:padding="10dp"
-        android:gravity="center"
-        android:layout_gravity="center_vertical"
-        android:ellipsize="end"
-        />
-    <ImageView
-        android:id="@+id/iv_avt"
-        android:layout_width="100dp"
-        android:layout_height="match_parent"
-        android:src="@drawable/img"
-        android:scaleType="centerCrop"
-        android:layout_gravity="center_vertical"
-        />
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingHorizontal="10dp">
+        android:orientation="horizontal">
         <TextView
-            android:id="@+id/tv_name"
-            android:layout_width="wrap_content"
+            android:id="@+id/tv_sort_order"
+            android:layout_width="50dp"
             android:layout_height="wrap_content"
-            android:text=""
+            android:text="01"
+            android:textStyle="bold"
             android:textSize="20sp"
-            android:maxLines="2"
+            android:padding="10dp"
+            android:gravity="center"
+            android:layout_gravity="center_vertical"
             android:ellipsize="end"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentStart="true"
             />
-        <androidx.cardview.widget.CardView
+        <ImageView
+            android:id="@+id/iv_avt"
+            android:layout_width="100dp"
+            android:layout_height="match_parent"
+            android:src="@drawable/img"
+            android:scaleType="centerCrop"
+            android:layout_gravity="center_vertical"
+            />
+        <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            app:cardCornerRadius="10sp">
+            android:paddingHorizontal="10dp">
             <TextView
-                android:id="@+id/tv_level"
+                android:id="@+id/tv_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="lv 0"
-                android:textSize="15sp"
-                android:background="@color/black_50"
-                android:textStyle="bold|italic"
-                android:textAllCaps="true"
-                android:textColor="@color/white"
-                android:maxLines="1"
+                android:text=""
+                android:textSize="20sp"
+                android:maxLines="2"
                 android:ellipsize="end"
-                android:gravity="center"
-                android:paddingVertical="5dp"
-                android:paddingHorizontal="15dp"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentStart="true"
                 />
+            <androidx.cardview.widget.CardView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                app:cardBackgroundColor="@android:color/transparent"
+                app:cardCornerRadius="10sp">
+                <TextView
+                    android:id="@+id/tv_level"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="lv 0"
+                    android:textSize="15sp"
+                    android:background="@color/black_50"
+                    android:textStyle="bold|italic"
+                    android:textAllCaps="true"
+                    android:textColor="@color/white"
+                    android:maxLines="1"
+                    android:ellipsize="end"
+                    android:gravity="center"
+                    android:paddingVertical="5dp"
+                    android:paddingHorizontal="15dp"
+                    />
 
-        </androidx.cardview.widget.CardView>
+            </androidx.cardview.widget.CardView>
 
-    </RelativeLayout>
+        </RelativeLayout>
+
+    </LinearLayout>
+
+
+
 </LinearLayout>
