--- a/app_mxh_manga/app/src/main/res/layout/layout_bottom_sheet_comment.xml
+++ b/app_mxh_manga/app/src/main/res/layout/layout_bottom_sheet_comment.xml
@@ -11,25 +11,38 @@
         android:background="@drawable/shape_bogoc"
         android:backgroundTint="#6B6B6B"
         android:layout_marginTop="10dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="10dp"
         android:layout_centerHorizontal="true"
         />
+    <TextView
+        android:id="@+id/tv1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Bình luận"
+        android:textSize="18sp"
+        android:padding="10dp"
+        android:textStyle="bold"
+        android:layout_below="@id/view"
+
+        />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_comment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         android:orientation="vertical"
-        android:layout_below="@id/view"
+        android:layout_below="@id/tv1"
         android:layout_above="@+id/view2"
         />
+
 
     <View
         android:id="@+id/view2"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_above="@id/relativeLayout_cmt"
-        android:background="@color/black_50" />
+        android:background="@color/light_gray" />
     <RelativeLayout
         android:id="@+id/relativeLayout_cmt"
         android:layout_width="match_parent"
