--- a/app_mxh_manga/app/src/main/res/layout/activity_new_chapter.xml
+++ b/app_mxh_manga/app/src/main/res/layout/activity_new_chapter.xml
@@ -15,28 +15,27 @@
         style="@style/Toolbar"
         app:title="Tạo chương mới"
         />
-    <EditText
-        android:id="@+id/edt_title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="25dp"
-        android:background="@color/white"
-        android:textStyle="bold"
-        android:padding="10dp"
-        android:layout_below="@id/toolbar"
-        android:inputType="text"
-        android:hint="Nhập tên chương"
-        android:layout_marginVertical="10dp"
-        />
+
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_below="@id/edt_title"
+        android:layout_below="@id/toolbar"
         android:layout_height="match_parent">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:paddingBottom="200dp">
+            <EditText
+                android:id="@+id/edt_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="25sp"
+                android:background="@color/white"
+                android:textStyle="bold"
+                android:padding="10dp"
+                android:hint="Nhập tên chương"
+                android:layout_marginVertical="10dp"
+                />
             <EditText
                 android:id="@+id/edt_content"
                 android:layout_width="match_parent"
