--- a/app_mxh_manga/app/src/main/res/layout/activity_reading_chapter.xml
+++ b/app_mxh_manga/app/src/main/res/layout/activity_reading_chapter.xml
@@ -16,6 +16,7 @@
         app:navigationIcon="@drawable/ic_baseline_navigate_before_40"
         />
     <androidx.core.widget.NestedScrollView
+        android:id="@+id/scrollView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/toolbar"
