--- a/app_mxh_manga/app/src/main/res/layout/fragment_profile.xml
+++ b/app_mxh_manga/app/src/main/res/layout/fragment_profile.xml
@@ -16,23 +16,22 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingHorizontal="10dp"
         android:layout_below="@id/toolbar"
         android:orientation="vertical">
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="200dp"
-            android:src="@drawable/logo_mangarw"
-            android:scaleType="centerInside"
+            android:src="@drawable/logo_app"
+            android:scaleType="centerCrop"
             android:adjustViewBounds="true"
-            android:layout_marginTop="-65dp"
+            android:layout_marginTop="0dp"
             />
         <androidx.cardview.widget.CardView
             android:layout_width="70dp"
             android:layout_height="70dp"
             app:cardElevation="0dp"
             android:layout_marginHorizontal="10dp"
-            android:layout_marginTop="-100dp"
+            android:layout_marginTop="-40dp"
             app:cardBackgroundColor="#70DEDEDE"
             app:cardCornerRadius="50dp">
             <ImageView
@@ -57,6 +56,7 @@
         <androidx.cardview.widget.CardView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_margin="10dp"
             app:cardCornerRadius="10dp">
             <TextView
                 android:id="@+id/tv_level"
